--- a/src/dev.html
+++ b/src/dev.html
@@ -4,6 +4,6 @@
     <script src="http://127.0.0.1:8080/build/customSkills.user.js"></script>
   </head>
   <body>
-    <div class="container spell-container">Hey</div>
+    <div class="container spell-container"></div>
   </body>
 </html>
