fix: test mocks

--- a/src/habiticaPomodoro/mocks/pomodoroTask.html
+++ b/src/habiticaPomodoro/mocks/pomodoroTask.html
@@ -1,5 +1,4 @@
 <div class="task type_habit">
-    <!---->
     <div class="d-flex">
         <div class="left-control d-flex align-items-center justify-content-center task-good-control-bg">
             <div class="task-control habit-control task-good-control-inner-habit">
@@ -10,7 +9,6 @@
                 </div>
             </div>
         </div>
-        <!---->
         <div class="task-content no-right-border">
             <div class="task-clickable-area task-clickable-area-user">
                 <div class="d-flex justify-content-between">
@@ -93,9 +91,7 @@
                 </div>
                 <div class="task-notes small-text markdown"></div>
             </div>
-            <!---->
             <div class="icons small-text d-flex align-items-center">
-                <!---->
                 <div class="icons-right d-flex justify-content-end">
                     <div class="d-flex align-items-center">
                         <div class="svg-icon streak">
@@ -106,13 +102,8 @@
                                 ></path>
                             </svg>
                         </div>
-                        <!----><span
-                            ><span class="m-0">+1</span><span class="m-0"> | </span><span class="m-0">-0</span></span
-                        >
+                        <span><span class="m-0">+1</span><span class="m-0"> | </span><span class="m-0">-0</span></span>
                     </div>
-                    <!---->
-                    <!---->
-                    <!---->
                 </div>
             </div>
         </div>
@@ -125,7 +116,5 @@
                 </div>
             </div>
         </div>
-        <!---->
     </div>
-    <!---->
 </div>
